...
      "isCommentAutoGenerated" : true
    },
    "Bool Test" : {
      "comment" : "A toggle switch for a boolean test.",
      "isCommentAutoGenerated" : true
    },
    "Build a Study Habit" : {
      "comment" : "Title for a page in the Onboarding flow that encourages users to build a study habit.",
      "isCommentAutoGenerated" : true
    },
    "Cancel" : {
      "comment" : "The label of a button that cancels an action.",
      "isCommentAutoGenerated" : true
    },
    "Card %lld of %lld" : {
      "comment" : "A heading and a progress bar that shows the current card index and the total number of cards in the deck.",
      "isCommentAutoGenerated" : true,
...
      "isCommentAutoGenerated" : true
    },
    "Cover Image" : {
      "comment" : "A label displayed above the section where a user can upload a cover image for their deck.",
      "isCommentAutoGenerated" : true
    },
    "Create" : {
      "comment" : "The title of the view.",
      "isCommentAutoGenerated" : true
    },
    "Create a deck to start studying" : {
      "comment" : "A description below the \"No decks yet\" text in the \"Your Decks\" section of the home screen.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Create New" : {
      "comment" : "A button label that suggests creating a new quiz or deck.",
      "isCommentAutoGenerated" : true
    },
    "Create with Intelligence" : {
      "comment" : "Title for the first page of the onboarding flow.",
      "isCommentAutoGenerated" : true
    },
    "Create your first deck to start studying" : {
      "comment" : "A description below the button to create a new deck, encouraging users to do so.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Enter answer" : {
      "comment" : "A label for a text field where a user can enter an answer to a flashcard question.",
      "isCommentAutoGenerated" : true
    },
    "Enter question" : {
      "comment" : "A placeholder text for a text field where a user can enter a question for a new flashcard.",
      "isCommentAutoGenerated" : true
    },
    "Enter source text to generate cards" : {
      "comment" : "A hint that appears when the \"Generate\" button is disabled, instructing the user to enter source text to generate cards.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Generate flashcards instantly from any text using on-device AI. Just paste your notes or upload a PDF and let Keyoku do the rest." : {
      "comment" : "Subtitle for the \"Create with Intelligence\" page in the OnboardingCompletedView.",
      "isCommentAutoGenerated" : true
    },
    "Generate with AI" : {
      "comment" : "Display name for the \"Generate with AI\" option in the deck creation settings.",
      "isCommentAutoGenerated" : true
    },
    "Generating Flashcards" : {
      "comment" : "A title that appears when a user is generating flashcards.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Get premium access to unlock all features." : {
      "comment" : "A description of the premium access feature.",
      "isCommentAutoGenerated" : true
    },
    "Get Started" : {
      "comment" : "The text for the final button in the onboarding flow, which takes the user directly to the main app.",
      "isCommentAutoGenerated" : true
    },
    "Go to next card" : {
      "comment" : "A hint that describes the action of going to the next card in a practice session.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Keep the streak going!" : {
      "comment" : "Subtitle for a notification scheduled to be shown on the 6th day of the week.",
      "isCommentAutoGenerated" : true
    },
    "Keyoku" : {
      "comment" : "The title of the app.",
      "isCommentAutoGenerated" : true
    },
    "Knowledge awaits!" : {
      "comment" : "Subtitle for a scheduled notification about studying.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Opens deck details" : {
      "comment" : "A hint that appears when a user hovers over a deck in the list, indicating that tapping it will open the deck's details.",
      "isCommentAutoGenerated" : true
    },
    "Organize Your Knowledge" : {
      "comment" : "Title of a page in the onboarding flow that teaches users how to organize their knowledge using decks of flashcards.",
      "isCommentAutoGenerated" : true
    },
    "Paste Text" : {
      "comment" : "Text displayed in the source input mode picker for pasting text.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Source Input" : {
      "comment" : "A label describing the mode of input for the source text in the create deck view.",
      "isCommentAutoGenerated" : true
    },
    "Source Text" : {
      "comment" : "A label displayed above the section where a user can input or upload text for a deck.",
      "isCommentAutoGenerated" : true
    },
    "Start Empty" : {
      "comment" : "Description of a deck creation mode when the user wants to start with an empty deck.",
      "isCommentAutoGenerated" : true
    },
    "Start studying all cards in this deck" : {
      "comment" : "A hint that appears when a user taps the \"Practice\" button in the deck detail view. It instructs the user to start studying all the cards in the current deck.",
      "isCommentAutoGenerated" : true
    },
    "Study all %lld cards" : {
      "comment" : "A description of the action of practicing with flashcards.",
      "isCommentAutoGenerated" : true
    },
    "Study smarter with AI-powered flashcards" : {
      "comment" : "A description of the app's functionality.",
      "isCommentAutoGenerated" : true
    },
    "Study Your Way" : {
      "comment" : "Title of a page in the onboarding flow that teaches users how to study.",
      "isCommentAutoGenerated" : true
    },
    "Tap to flip" : {
      "comment" : "A hint displayed below each flashcard, instructing the user to tap to flip it.",
      "isCommentAutoGenerated" : true
...
