...
                .callToActionButton(cornerRadius: 14)
                .lineLimit(1)
                .minimumScaleFactor(0.5)
                .anyButton(.press) {
                    presenter.onGetStartedPressed()
                }
                .accessibilityIdentifier("StartButton")
                .frame(maxWidth: 500)

            Text("Already have an account? **Sign in**")
                .font(.subheadline)
                .foregroundStyle(.secondary)
                .padding(8)
...
